04-full-app/ingress/apim-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portal
#  annotations:
#    kubernetes.io/tls-acme: "true"
#    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - portal.martin.k8s.donmartin76.com
    secretName: portal-tls

  rules:
  - host: portal.martin.k8s.donmartin76.com
    http:
      paths:
      - path:
        backend:
          serviceName: portal
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
#  annotations:
#    kubernetes.io/tls-acme: "true"
#    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.martin.k8s.donmartin76.com
    secretName: api-tls

  rules:
  - host: api.martin.k8s.donmartin76.com
    http:
      paths:
      - path:
        backend:
          serviceName: kong-gw
          servicePort: 8000
